Bug 493157 - IMAP attachment text file data is incorrect received from OEX composed email; r+sr=bienvenu